--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -5,3 +5,9 @@
 .sidebar summary{
     color: #fffb00;
 }
+
+nav.topbar .button{
+    border-radius: 0;
+    background-color: unset;
+    color: red;
+}
